--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "Formulario con protección de Turnstile",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "node-fetch": "^3.3.2"
-  }
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "node-fetch": "^3.3.1"
+  },
+  "type": "module"
 }
